--- a/ms-expense/build.gradle
+++ b/ms-expense/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.4.4'
+    id 'org.springframework.boot' version '3.1.8'
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
@@ -23,6 +23,13 @@ repositories {
     mavenCentral()
 }
 
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2022.0.4"
+    }
+}
+
+
 dependencies {
     // Spring Boot core
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -36,6 +43,9 @@ dependencies {
     // Lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+
 
     // MapStruct
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
