--- a/ms-expense/src/main/resources/application.yml
+++ b/ms-expense/src/main/resources/application.yml
@@ -12,5 +12,10 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: true
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
