--- a/ms-analytics/build.gradle
+++ b/ms-analytics/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.4.5'
-    id 'io.spring.dependency-management' version '1.1.7'
+    id 'org.springframework.boot' version '3.1.5' // ⚠️ Əgər Spring Cloud istifadə olunacaqsa 3.4.5 uyğun deyil!
+    id 'io.spring.dependency-management' version '1.1.3'
 }
 
 group = 'az.edu'
@@ -18,9 +18,26 @@ repositories {
 }
 
 dependencies {
+    // Web və REST
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    // Eureka Client
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+
+    // Lombok
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
+    // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+// Spring Cloud versiyasını idarə etmək üçün
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2022.0.5"
+    }
 }
 
 tasks.named('test') {
