--- a/ms-analytics/build.gradle
+++ b/ms-analytics/build.gradle
@@ -1,16 +1,18 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.5' // ⚠️ Əgər Spring Cloud istifadə olunacaqsa 3.4.5 uyğun deyil!
-    id 'io.spring.dependency-management' version '1.1.3'
+    id 'org.springframework.boot' version '3.1.2'
+    id 'io.spring.dependency-management' version '1.1.2'
 }
 
 group = 'az.edu'
 version = '0.0.1-SNAPSHOT'
 
 java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
-    }
+    sourceCompatibility = '17'
+}
+
+ext {
+    set('springCloudVersion', "2022.0.4")
 }
 
 repositories {
@@ -18,28 +20,16 @@ repositories {
 }
 
 dependencies {
-    // Web və REST
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-
-    // Eureka Client
+    implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
-    // Lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-
-    // Test
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-// Spring Cloud versiyasını idarə etmək üçün
 dependencyManagement {
     imports {
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2022.0.5"
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
-}
-
-tasks.named('test') {
-    useJUnitPlatform()
 }
