--- a/ms-analytics/src/main/resources/application.yml
+++ b/ms-analytics/src/main/resources/application.yml
@@ -1,11 +1,20 @@
 server:
-  port: 8082
+  port: 8083
 
 spring:
   application:
     name: ms-analytics
 
+
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
+    fetch-registry: true
+    register-with-eureka: true
+  instance:
+    prefer-ip-address: true
+
+logging:
+  level:
+    az.edu.msanalytics: DEBUG
