--- a/ms-api-gateway/build.gradle
+++ b/ms-api-gateway/build.gradle
@@ -32,6 +32,9 @@ dependencies {
 
     // Spring WebFlux (Reactive)
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    
+    // Spring Security WebFlux
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     // Lombok
     compileOnly 'org.projectlombok:lombok'
