--- a/ms-api-gateway/build.gradle
+++ b/ms-api-gateway/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     // Spring Security WebFlux
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
+
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
     // Lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
