--- a/ms-api-gateway/build.gradle
+++ b/ms-api-gateway/build.gradle
@@ -32,7 +32,10 @@ dependencies {
 
     // Spring WebFlux (Reactive)
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    
+
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     // Spring Security WebFlux
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
