feat: replace old email logic with Mailtrap SMTP for test environment

--- a/ms-notification/src/main/resources/application.properties
+++ b/ms-notification/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=ms-notification
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=ed28c9e6ae0fba
+spring.mail.password=f73047e81aec81
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
