Add pure JUnit unit tests for all entities and configure test dependencies
- Added JUnit 5, Mockito, AssertJ, and Spring Boot test dependencies to build.gradle
- Created unit tests for Expense, Category, User, PasswordResetToken, and NotificationSettings entities
- Tests cover entity creation, null/invalid data, field updates, equals/hashCode, and special logic (timestamps, expiry)
- Ensured all tests are pure unit tests (no DB/repository interaction)

--- a/ms-notification/src/main/resources/application.yml
+++ b/ms-notification/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/notificationdb
+    url: jdbc:postgresql://localhost:5432/expensetracker
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
@@ -19,6 +19,17 @@ spring:
   jackson:
     serialization:
       WRITE_DATES_AS_TIMESTAMPS: false
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ilkinrzayev07700@gmail.com
+    password: yisl dsgz exqe gawe
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 
 server:
   port: 8085
